--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>欢迎来到我的网页！</h1>
-    < img src="image.jpg" alt="展示图片">
+    < img src="fff.jpg" alt="展示图片">
 </body>
 </html>
